force-app/main/default/objects/FieldSetMapping__mdt/FieldSetMapping__mdt.object-meta.xml
<CustomObject>
    <description>Controls sections and fields rendered dynamically for record forms.</description>
    <label>Field Set Mapping</label>
    <pluralLabel>Field Set Mappings</pluralLabel>
</CustomObject>