force-app/main/default/objects/FieldSetMapping__mdt/fields/FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetName__c</fullName>
    <label>Field Set API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>