force-app/main/default/objects/FieldSetMapping__mdt/fields/IsSectionRequired__c.field-meta.xml
<CustomField>
    <fullName>IsSectionRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Section Required</label>
    <type>Checkbox</type>
</CustomField>