force-app/main/default/objects/FieldSetMapping__mdt/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>