force-app/main/default/objects/FieldSetMapping__mdt/fields/RequiresAttachment__c.field-meta.xml
<CustomField>
    <fullName>RequiresAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a atividade deve exibir opção para anexar arquivo.</description>
    <inlineHelpText>Quando marcado, o formulário exibirá opção para anexar arquivo ao registro relacionado.</inlineHelpText>
    <label>Requires Attachment</label>
    <type>Checkbox</type>
</CustomField>