force-app/main/default/objects/FieldSetMapping__mdt/fields/RequiresComment__c.field-meta.xml
<CustomField>
    <fullName>RequiresComment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a atividade exige comentário para conclusão (sem campos).</description>
    <inlineHelpText>Quando marcado, o formulário exibirá opção para finalizar a atividade com comentário.</inlineHelpText>
    <label>Requires Comment</label>
    <type>Checkbox</type>
</CustomField>