force-app/main/default/objects/FieldSetMapping__mdt/fields/SectionLabel__c.field-meta.xml
<CustomField>
    <fullName>SectionLabel__c</fullName>
    <label>Section Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>