force-app/main/default/objects/FieldSetMapping__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>